[project]
name = "codesystem"
version = "0.1.0"
description = "codesystem using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
codesystem = "codesystem.main:run"
run_crew = "codesystem.main:run"
train = "codesystem.main:train"
replay = "codesystem.main:replay"
test = "codesystem.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
